--- a/HankoyaJuchuSearch/manifest.json
+++ b/HankoyaJuchuSearch/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": 2,
   "description": "context-menu to jump to Juchu-List from selected text",
   "content_scripts": [{
-    "matches": ["https://amida.cybozu.com/k/*"],
+    "matches": ["https://amida.cybozu.com/*"],
     "all_frames": true,
     "js": ["jquery-3.4.1.min.js","juchu_popup.js"]
   }],
